# meta

./: .env.example  .gitignore  CLAUDE_CODE_CONTEXT.md  Dockerfile  README.md  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml
incident_response_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scenarios/: __init__.py  alert_triage.py  base_scenario.py  definitions.py  scenario_classes.py
server/: app.py  env.py  env_rubric_patch.py  incident_response_ui.html  state.py
server/api/: __init__.py  models.py  routes.py
server/ui/: __init__.py  callbacks.py  constants.py  layout.py  renderers.py  styles.py
